@@ -1,76 +1,0 @@
-/*
- * Copyright (C) 2010 University of Szeged. All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- *    notice, this list of conditions and the following disclaimer in the
- *    documentation and/or other materials provided with the distribution.
- *
- * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS''
- * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
- * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
- * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL APPLE INC. OR ITS CONTRIBUTORS
- * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
- * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
- * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
- * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
- * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
- * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
- * THE POSSIBILITY OF SUCH DAMAGE.
- */
-
-#ifndef CleanupHandler_h
-#define CleanupHandler_h
-
-#include <QCoreApplication>
-#include <QList>
-#include <QObject>
-#include <wtf/HashSet.h>
-#include <wtf/StdLibExtras.h>
-
-namespace WebKit {
-
-class CleanupHandler : private QObject {
-    Q_OBJECT
-public:
-    static CleanupHandler* instance()
-    {
-        if (!theInstance)
-            theInstance = new CleanupHandler();
-        return theInstance;
-    }
-
-    void markForCleanup(QObject* object)
-    {
-        m_objects.append(object);
-    }
-
-    void unmark(QObject* object)
-    {
-        if (m_hasStartedDeleting)
-            return;
-        m_objects.removeOne(object);
-    }
-
-    bool hasStartedDeleting() const { return m_hasStartedDeleting; }
-
-private slots:
-    void deleteObjects();
-
-private:
-    static void sigTermHandler(int);
-    static CleanupHandler* theInstance;
-
-    CleanupHandler();
-
-    QList<QObject*> m_objects;
-    bool m_hasStartedDeleting;
-};
-
-} // namespace WebKit
-
-#endif // CleanupHandler_h
